[gd_scene load_steps=3 format=3 uid="uid://c14lolc6axuf0"]

[ext_resource type="Script" path="res://addons/hyh.cutscene_graph/editor/inspector/character_property_edit/PropertyCollectionEditor.gd" id="1_fhij2"]
[ext_resource type="Texture2D" uid="uid://ddkdwrnkby3ww" path="res://addons/hyh.cutscene_graph/icons/icon_add.svg" id="1_n5dly"]

[node name="PropertyCollectionEditor" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_fhij2")

[node name="VB" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PropertyTree" type="Tree" parent="VB"]
custom_minimum_size = Vector2(50, 200)
layout_mode = 2
size_flags_vertical = 3
columns = 3
hide_root = true

[node name="AddButton" type="Button" parent="VB"]
layout_mode = 2
text = "Add Property"
icon = ExtResource("1_n5dly")

[connection signal="button_clicked" from="VB/PropertyTree" to="." method="_on_property_tree_button_clicked"]
[connection signal="item_edited" from="VB/PropertyTree" to="." method="_on_property_tree_item_edited"]
[connection signal="pressed" from="VB/AddButton" to="." method="_on_add_button_pressed"]
